--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-phone-number-input": "^3.4.9",
-    "swiper": "^11.1.15",
-    "typewriter-effect": "^2.21.0"
+    "react-typed": "^2.0.12",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@types/node": "^20",
